--- a/WebContent/css/sb-admin-2.css
+++ b/WebContent/css/sb-admin-2.css
@@ -1,8 +1,3 @@
-/*!
- * Start Bootstrap - SB Admin 2 v3.3.7+1 (http://startbootstrap.com/template-overviews/sb-admin-2)
- * Copyright 2013-2016 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
- */
 body {
   background-color: #f8f8f8;
 }
@@ -253,4 +248,21 @@ body {
 }
 #person{
   margin:10px;
+}
+
+.mask {
+  position: absolute;
+  top: 0px;
+  filter: alpha(opacity=60);
+  background-color: #777;
+  z-index: 1000002;
+  left: 0px;
+  opacity:0.4;
+  -moz-opacity:0.4;
+  display: none;
+}
+.fixedbox{
+  position: fixed;
+  left: 50%;
+  top: 50%;
 }
